// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Swiper.Menu checkGrammar=false 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkGrammar=true 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkHighlight=false 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkHighlight=true 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkSpaces=false 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkSpaces=true 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu className="my-classname" 1`] = `
<div
  className="uu5-bricks-swiper-menu my-classname uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu className="test-classname" 1`] = `
<div
  className="uu5-bricks-swiper-menu test-classname uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Swiper.Menu content=12345 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Swiper.Menu controlled=false 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu controlled=true 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu default props 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu disabled=false 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu disabled=false 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu disabled=true 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-common-disabled uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Swiper.Menu disabled=true 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-common-disabled uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Swiper.Menu docKit examples UU5.Bricks.Swiper.Menu example01 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
      "minHeight": "200px",
      "width": "100%",
    }
  }
  title={null}
>
  <swiper-menu
    id="idA"
    key="idA"
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
  >
    <Button
      content="Close"
      id="idB"
      onClick={[Function]}
    />
  </swiper-menu>
  <swiper-body
    id="uuID2"
    key="uuID2"
  >
    <P
      className="center"
      id="uuID3"
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper.Menu dynamic=false 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu dynamic=true 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu fullTextSearchPriority=0 1`] = `
<div
  className="uu5-bricks-swiper-menu uu-fulltextsearch-0 uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu hidden=false 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu hidden=false 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu hidden=true 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-common-hidden uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu hidden=true 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-common-hidden uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu id="myId" 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu id="test-id" 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="test-id"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu name="myName" 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel="box" 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel="inline" 3`] = `""`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu noIndex=false 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu noIndex=true 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-noindex uu-fulltextsearch-0 uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu noPrint=false 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu noPrint=true 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu pullRight=undefined 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu pureRender=false 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu pureRender=true 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu selected=false 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu selected=true 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-common-selected uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu style={"margin":8} 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu textCorrector=false 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu textCorrector=true 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
